Change API base path

--- a/swagger/index.yaml
+++ b/swagger/index.yaml
@@ -42,7 +42,7 @@ produces:
 - application/json
 schemes:
 - http
-basePath: "/api/v1"
+basePath: "/api/flagr/v1"
 paths:
   /flags:
     $ref: ./flags.yaml
